app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Young+Serif&display=swap");

:root,
.light {
  --border--radius: 0.8rem;
  --scroll-margin--top: 37.5rem;
  --project--card--shadow: rgb(0, 0, 0);
  --form--label--font: "Young Serif", "arial", "sans serif";

  --bg--img--home: url("/fond_code_ligth.webp");
  --bg--img--contact: url("/fond_etoiles_light.webp");

  --primary--color: 255, 145, 0;
  --secondary--color: 171, 97, 0;
  --text--color: rgb(36, 36, 36);
  --background--color: 221, 221, 221;
  --background--secondary--color: 197, 197, 197;

  --button--send--text--color: rgb(0, 0, 0);
  --button--send--background--color: rgb(var(--primary--color));
  --button--reset--text--color: rgb(255, 255, 255);
  --button--reset--background--color: rgb(var(--secondary--color));
}

.dark {
  --bg--img--home: url("/fond_code_dark.webp");
  --bg--img--contact: url("/fond_etoiles_dark.webp");

  --primary--color: 57, 135, 159;
  --secondary--color: 26, 63, 75;
  --text--color: rgb(221, 221, 221);
  --background--color: 36, 36, 36;
  --background--secondary--color: 65, 65, 65;
}

@media (prefers-color-scheme: dark) {
  :root {
    --bg--img--home: url("/fond_code_dark.webp");
    --bg--img--contact: url("/fond_etoiles_dark.webp");

    --primary--color: 57, 135, 159;
    --secondary--color: 26, 63, 75;
    --text--color: rgb(221, 221, 221);
    --background--color: 36, 36, 36;
    --background--secondary--color: 65, 65, 65;
  }
}

* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0;
  border: unset;
  padding: 0;
  color: var(--text--color);
}

a {
  text-decoration: none;
}

html {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  font-size: 62.5%; /* 1 rem = 10px */
  scroll-behavior: smooth;
}

body {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 1440px;
  background-color: rgb(var(--background--color));
  overflow-x: hidden;
}

h1 {
  font-family: var(--font--lugrasimo), "arial", "sans serif";
  font-size: 4rem;
}

h2 {
  padding: 30px 0 50px 0;
  font-family: var(--font--lugrasimo), "arial", "sans serif";
  font-size: 3rem;
}

h3 {
  font-family: var(--font--lugrasimo), "arial", "sans serif";
  font-size: 2.5rem;
}

section {
  padding: 50px 0;
}

@media (width > 768px) {
  .light,
  .dark {
    --scroll-margin--top: 70px;
  }

  section {
    padding: 50px;
  }
}

